# demo02

./: .gitignore  README.md
backend/: app.py  init_db.py  lab_homepage.db  pyproject.toml
frontend/: index.html  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Footer.module.css  Footer.tsx  Hero.module.css  Hero.tsx  Members.module.css  Members.tsx  Navbar.module.css  Navbar.tsx  News.module.css  News.tsx  Papers.module.css  Papers.tsx  Research.module.css  Research.tsx  Skeleton.module.css  Skeleton.tsx  Status.module.css  Status.tsx
frontend/src/hooks/: useApi.ts
frontend/src/types/: index.ts
